--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
               <div class="muted">Tip: A minimum of 16 characters is recommended. Consider 24-32 for very sensitive accounts.</div>
             </div>
 
+            <!-- right: checkboxes charsets #1-->
             <div>
               <label>Character sets</label>
               <div class="checks" role="group" aria-label="Character sets">
@@ -61,11 +62,13 @@
               </div>
             </div>
 
+            <!-- right: checkboxes FALSE OR TRUE functions #2-->
             <div class="checks">
               <label class="check"><input id="noSimilar" type="checkbox"> <span>Exclude look-alikes <span class="muted">(O,0,l,1,I,|,o)</span></span></label>
               <label class="check"><input id="requireEach" type="checkbox" checked> <span>Require at least one from each selected set</span></label>
             </div>
 
+            <!-- right: checkboxes manual input #3-->
             <div class="grid-2">
               <div>
                 <label for="exclude">Exclude these characters</label>
