--- a/index.html
+++ b/index.html
@@ -1,96 +1,43 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="A client-side password generator." />
-  <meta name="theme-color" content="#111827" />
-  <link rel="stylesheet" href="style.css">
-  <script src="cryptoPass.js" type="text/javascript"></script>
-  <title>Password Generator</title>
+  <title>Minecraft Server — Home</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="icon" href="assets/favicon.png">
 </head>
 <body>
-  <noscript><div class="wrap"><div class="card" style="padding:18px"><b>JavaScript is required</b> to generate passwords locally in your browser.</div></div></noscript>
-  <div class="wrap">
-    <div class="card" role="application" aria-label="Password generator">
-      <header>
-        <div>
-          <h1>🔐 Password Generator</h1>
-          <div class="sub">No remote server contacted. Fully local.</div>
+  <header id="site-header"></header>
+
+  <main class="container">
+    <section class="hero">
+      <div class="hero-text">
+        <h1>Welcome to Our Minecraft World</h1>
+        <p>Seeded adventures, redstone wizardry, scenic railways, and secret bases. Jump in and explore ✨</p>
+        <div class="cta-row">
+          <a class="btn" href="poi.html">Explore POIs</a>
+          <a class="btn secondary" href="trains.html">Train Map</a>
         </div>
-        <div class="inline muted">Entropy: <span id="entropy">0</span> bits <span id="entropyLabel" class="muted" style="margin-left:8px"></span></div>
-      </header>
-
-      <section class="content">
-        <!-- left: output -->
-        <div class="panel">
-          <div class="password-box">
-            <div class="pw" id="output" aria-live="polite">—</div>
-            <div class="btns">
-              <button id="generate" class="btn-ok">Generate</button>
-              <button id="copy" class="btn-ghost">Copy</button>
-              <button id="regen" class="btn-ghost">Regenerate</button>
-              <button id="clear" class="btn-danger">Clear</button>
-            </div>
-            <div class="strength">
-              <div class="bar" aria-hidden="true"><span id="meter"></span></div>
-              <div id="status" class="muted">Choose your options to begin.</div>
-            </div>
-          </div>
-        </div>
-
-        <!-- right: controls -->
-        <form id="form" class="panel" autocomplete="off">
-          <div class="controls">
-            <div>
-              <label for="length">Length</label>
-              <div class="slider-wrap">
-                <input id="length" type="range" min="8" max="128" value="16" />
-                <input id="lengthNum" type="number" min="4" max="256" value="16" />
-              </div>
-              <div class="muted">Tip: A minimum of 16 characters is recommended. Consider 24-32 for very sensitive accounts.</div>
-            </div>
-
-            <!-- right: checkboxes charsets #1-->
-            <div>
-              <label>Character sets</label>
-              <div class="checks" role="group" aria-label="Character sets">
-                <label class="check"><input id="lower" type="checkbox" checked> <span>Lowercase <span class="muted">(a-z)</span></span></label>
-                <label class="check"><input id="upper" type="checkbox" checked> <span>Uppercase <span class="muted">(A-Z)</span></span></label>
-                <label class="check"><input id="digits" type="checkbox" checked> <span>Digits <span class="muted">(0-9)</span></span></label>
-                <label class="check"><input id="symbols" type="checkbox"> <span>Symbols <span class="muted">(!@#$…)</span></span></label>
-              </div>
-            </div>
-
-            <!-- right: checkboxes FALSE OR TRUE functions #2-->
-            <div class="checks">
-              <label class="check"><input id="noSimilar" type="checkbox"> <span>Exclude look-alikes <span class="muted">(O,0,l,1,I,|,o)</span></span></label>
-              <label class="check"><input id="requireEach" type="checkbox" checked> <span>Require at least one from each selected set</span></label>
-            </div>
-
-            <!-- right: checkboxes manual input #3-->
-            <div class="grid-2">
-              <div>
-                <label for="exclude">Exclude these characters</label>
-                <textarea id="exclude" placeholder="e.g. @:/\\'&quot;`O0l1|"></textarea>
-              </div>
-              <div>
-                <label for="custom">Include extra characters</label>
-                <textarea id="custom" placeholder="Any additional characters to include"></textarea>
-              </div>
-            </div>
-
-            <div class="help muted">All randomness is generated with <code>crypto.getRandomValues()</code>. Nothing leaves your device.</div>
-            <div id="warnings" class="muted" aria-live="polite"></div>
-          </div>
-        </form>
-      </section>
-
-      <div class="foot">
-        <div class="muted">Settings are stored locally.</div>
-        <a class="link-btn" href="#" id="downloadTxt" download>Download as a .txt</a>
       </div>
-    </div>
-  </div>
+      <div class="hero-image">
+        <img src="assets/images/hero.jpg" alt="Overlook of our Minecraft world" loading="eager" />
+      </div>
+    </section>
+
+    <section>
+      <h2 class="section-title">Gallery</h2>
+      <div id="gallery" class="masonry"></div>
+    </section>
+  </main>
+
+  <footer id="site-footer"></footer>
+
+  <script type="module" src="js/site.js"></script>
+  <script type="module" src="js/home.js"></script>
 </body>
 </html>
