--- a/password/index.html
+++ b/password/index.html
@@ -29,7 +29,7 @@
             <div class="btns">
               <button id="generate" class="btn-ok">Generate</button>
               <button id="copy" class="btn-ghost">Copy</button>
-              <button id="regen" class="btn-ghost">Regenerate</button>
+              <button id="regen" class="btn-ghost">Generate 100</button>
               <button id="clear" class="btn-danger">Clear</button>
             </div>
             <div class="strength">
