--- a/index.html
+++ b/index.html
@@ -2,202 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <title>Project Hub</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Minecraft Server — Home</title>
-
-  <!-- Google Fonts: Minecraft-like -->
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="css/styles.css" />
-  <link rel="icon" href="assets/favicon.jpg">
-  <meta name="color-scheme" content="dark">
-
-  <style>
-    /* Apply MC-like font everywhere */
-    body {
-      font-family: "Press Start 2P", monospace;
-      letter-spacing: 0.5px;
-      font-size: 14px;
-    }
-    h1,h2,h3,h4,h5,h6 {
-      font-family: "Press Start 2P", monospace;
-      letter-spacing: 1px;
-    }
-
-    /* Navbar styling */
-    .navbar {
-      background: #111;
-      border-bottom: 2px solid #333;
-      padding: 12px 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
-    .navbar .logo {
-      display: flex;
-      align-items: center;
-      text-decoration: none;
-      color: #fff;
-      gap: 10px;
-    }
-    .navbar .logo img {
-      width: 28px;
-      height: 28px;
-    }
-    .navbar nav {
-      display: flex;
-      gap: 18px;
-    }
-    .navbar nav a {
-      text-decoration: none;
-      color: #eee;
-      padding: 8px 10px;
-      border-radius: 6px;
-      transition: background 0.2s;
-    }
-    .navbar nav a:hover,
-    .navbar nav a.active {
-      background: #2c2c2c;
-    }
-
-    /* Hero */
-    .hero {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: space-between;
-      gap: 20px;
-      margin: 24px 0;
-    }
-    .hero-text {
-      flex: 1;
-      min-width: 280px;
-    }
-    .hero-text h1 {
-      font-size: 20px;
-      margin-bottom: 16px;
-    }
-    .hero-text p {
-      color: #ccc;
-      margin-bottom: 18px;
-    }
-    .hero-image {
-      flex: 1;
-      min-width: 280px;
-    }
-    .hero-image img {
-      width: 100%;
-      border-radius: 12px;
-      border: 2px solid #333;
-    }
-
-    /* Buttons */
-    .btn {
-      background: #3c8d2f;
-      color: #fff;
-      text-decoration: none;
-      padding: 10px 14px;
-      border-radius: 6px;
-      margin-right: 8px;
-      display: inline-block;
-    }
-    .btn:hover {
-      background: #2f6a23;
-    }
-
-    /* Gallery */
-    .section-title {
-      margin-top: 40px;
-      margin-bottom: 20px;
-    }
-    .masonry {
-      column-count: 2;
-      column-gap: 14px;
-    }
-    .masonry figure {
-      background: #1a1a1a;
-      border: 2px solid #333;
-      border-radius: 12px;
-      margin: 0 0 14px;
-      overflow: hidden;
-      position: relative;
-    }
-    .masonry img {
-      width: 100%;
-      display: block;
-    }
-    .masonry figcaption {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      padding: 8px;
-      background: linear-gradient(to top, rgba(0,0,0,0.9), rgba(0,0,0,0.1));
-      color: #fff;
-      font-size: 10px;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      border-top: 2px solid #333;
-      color: #aaa;
-      margin-top: 40px;
-    }
-  </style>
+  <meta name="color-scheme" content="light dark" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Navbar -->
-  <div class="navbar">
-    <a href="index.html" class="logo">
-      <img src="assets/favicon.jpg" alt="Logo">
-      <span>MC SERVER</span>
-    </a>
-    <nav>
-      <a href="index.html" class="active">Home</a>
-      <a href="poi.html">POIs</a>
-      <a href="trains.html">Trains</a>
-    </nav>
-  </div>
+  <header class="topbar container">
+    <div class="brand">
+      <div class="logo">★</div>
+      <h1>Project Hub</h1>
+    </div>
+    <div class="search">
+      <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M21 21l-4.35-4.35M10.5 18a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15Z"
+              stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+      </svg>
+      <input id="q" placeholder="Search projects…" autocomplete="off" />
+    </div>
+  </header>
 
   <main class="container">
     <section class="hero">
-      <div class="hero-text">
-        <h1>Welcome to Our Minecraft World</h1>
-        <p>Scenic railways, secret bases, and redstone builds. Jump in and explore!</p>
-        <a class="btn" href="poi.html">Explore POIs</a>
-        <a class="btn" href="trains.html">Train Map</a>
-      </div>
+      <h2>Your Projects</h2>
+      <p>Each button opens <code>&lt;folder&gt;/index.html</code>.</p>
     </section>
 
-    <section>
-      <h2 class="section-title">Gallery</h2>
-      <div id="gallery" class="masonry"></div>
-    </section>
+    <div id="status" class="empty hidden"></div>
+    <div id="grid" class="grid"></div>
   </main>
 
+  <footer class="footer container">
+    <small>No server, no CORS. Static config embedded below.</small>
+  </footer>
 
-  <script type="module">
-    import { loadJSON } from './js/site.js';
-    (async function(){
-      try{
-        const data = await loadJSON('data/gallery.json');
-        const el = document.getElementById('gallery');
-        data.photos.forEach(p => {
-          const fig = document.createElement('figure');
-          fig.innerHTML = `
-            <img src="${p.src}" alt="${p.alt || ''}" loading="lazy">
-            ${p.caption ? `<figcaption>${p.caption}</figcaption>` : ''}
-          `;
-          el.appendChild(fig);
-        });
-      }catch(e){
-        console.error(e);
-      }
-    })();
+  <!-- Inline JSON that script.js will read -->
+  <script id="sites-data" type="application/json">
+  [
+    { "folder": "Password", "title": "Password", "desc": "Cool thing", "icon": "🚀" },
+    { "folder": "Gallery", "title": "Gallery", "desc": "Photos & stuff", "icon": "🖼️" },
+    { "folder": "Minecraft", "title": "Minecraft", "desc": "Notes & guides", "icon": "📚" }
+  ]
   </script>
+
+  <script src="script.js"></script>
 </body>
 </html>
