--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -8,7 +8,7 @@
   <!-- JSZip for ZIP fallback -->
   <script defer src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
 </head>
-<body>
+<body class="boot-gate">
   <header class="topbar">
     <div class="left-spacer"></div>
     <h1>Prompt Vault</h1>
