--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -68,7 +68,7 @@
         <pre id="modalPrompt" class="prompt-pre block"></pre>
         <div class="fp-actions">
           <button id="copyPrompt" class="btn btn-primary">Copy Prompt</button>
-        </div>
+        <button id="downloadImg" class="btn">Download image</button> <button id="downloadAll" class="btn">Download set (.zip)</button></div>
       </aside>
     </div>
 
