--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Prompt Vault — No Build</title>
   <link rel="stylesheet" href="assets/styles.css" />
-  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
 </head>
 <body class="boot-gate">
 
@@ -147,4 +147,3 @@
   <script src="assets/script-nobuild.js" defer></script>
 </body>
 </html>
-
